# gameshop

./: .dockerignore  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.yml  manage.py  next.config.js  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.ts
app/: layout.tsx  page.tsx
app/cart/: page.tsx
app/cart/components/: CartItemCard.tsx  CartItemsList.tsx  SubmitOrderForm.tsx
app/components/: Providers.tsx  SideFilters.tsx  SidePanel.tsx  SortSelector.tsx
app/components/Navbar/: Navbar.tsx  SearchBar.tsx  ThemeSwitch.tsx  UserPanel.tsx
app/contexts/: AuthContextProvider.tsx
app/entities/: Cart.ts  CartItem.ts  Developer.ts  Game.ts  Genre.ts
app/hooks/: useFetchGames.ts  usePrefetchGames.ts
app/id/: page.tsx
app/login/: page.tsx
app/profile/: page.tsx
app/redux/: gameQuerySlice.ts  store.ts
app/register/: page.tsx
app/schemas/: addressSchema.ts  changeUserPasswordSchema.ts  loginUserSchema.ts  orderSchema.ts  registerUserSchema.ts  reviewSchema.ts  supportTicketMessageSchema.ts
app/services/: apiService.ts
app/utils/: Providers.tsx
backend/: Dockerfile.dev
backend/game_shop/: asgi.py  test_base.py  urls.py
backend/games/: admin.py  filters.py  models.py  views.py
backend/orders/: admin.py  models.py  utils.py  views.py
core/: fields.py  mixins.py  models.py  pagination.py  paginations.py  utils.py
core/migrations/: 0001_initial.py
frontend/: .dockerignore  .gitignore  next.config.js  pnpm-lock.yaml
frontend/app/: globals.scss  not-found.tsx  page.tsx
game_shop/: settings.py  urls.py  wsgi.py
game_shop/settings/: common.py  development.py  production.py
games/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
games/migrations/: 0001_initial.py
games/tests/: test_add_favourite_game.py  test_create_review.py  test_delete_review.py  test_remove_favourite_game.py  test_review.py  test_update_review.py
orders/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
orders/migrations/: 0001_initial.py
(+171 files in other folders)
