[tool.poetry]
name = "backend-paw565pl"
version = "0.1.0"
description = ""
authors = ["Paw565pl <paw565pl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.1"
djangorestframework = "^3.14.0"
djongo = "^1.3.6"
pymongo = "^3.13"
django-environ = "^0.11.2"
pytz = "^2023.3.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
