[tool.poetry]
name = "backend-paw565pl"
version = "0.1.0"
description = ""
authors = ["Paw565pl <paw565pl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^4.1"
djangorestframework = "^3.14.0"
djongo = "^1.3.6"
pymongo = "^3.13"
django-environ = "^0.11.2"
pytz = "^2023.3.post1"
django-filter = "^23.5"
drf-nested-routers = "^0.93.5"
tqdm = "^4.66.1"
djoser = "^2.2.2"
djangorestframework-simplejwt = { extras = ["crypto"], version = "^5.3.1" }
drf-spectacular = { extras = ["sidecar"], version = "^0.27.0" }


[tool.poetry.group.prod.dependencies]
whitenoise = { extras = ["brotli"], version = "^6.6.0" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
